# centauro_mpc

./: CMakeLists.txt  README.md
bindings/python/: CMakeLists.txt  pyTimeline.cpp
document/: templete.txt
include/phase_manager/: phase.h  phase_manager.h  timeline.h
src/: phase.cpp  phase_manager.cpp  timeline.cpp
tests/: main.cpp
